--- a/global.css
+++ b/global.css
@@ -52,9 +52,9 @@
 
     /* tab icon */
     --tab-icon-default: 220 9% 69%;
-    //hsl(220 9% 69%)
+    /* hsl(220 9% 69%)*/
     --tab-icon-selected: 217 91% 60%;
-    //hsl(217 91% 60%)
+    /* hsl(217 91% 60%)*/
 
     --radius: 0.625rem;
   }
@@ -108,9 +108,9 @@
 
     /* tab icon */
     --tab-icon-default: 215 15% 46%;
-    //hsl( 215 15% 46%)
+    /* hsl( 215 15% 46%)*/
     --tab-icon-selected: 217 91% 65%;
-    //hsl( 217 91% 65%)
+    /* hsl( 217 91% 65%)*/
 
     --radius: 0.625rem;
   }
